updating ESDG with EC shock vortex

--- a/docs/ESDG_GQ/dg.bib
+++ b/docs/ESDG_GQ/dg.bib
@@ -1,3 +1,14 @@
+@article{harten1983upstream,
+  title={{On upstream differencing and Godunov-type schemes for hyperbolic conservation laws}},
+  author={Harten, Amiram and Lax, Peter D and Leer, Bram van},
+  journal={SIAM review},
+  volume={25},
+  number={1},
+  pages={35--61},
+  year={1983},
+  publisher={SIAM}
+}
+
 @article{nordstrom2006conservative,
   title={Conservative finite difference formulations, variable coefficients, energy estimates and artificial dissipation},
   author={Nordstr{\"o}m, Jan},
