updating ESDG_GQ

--- a/docs/ESDG_GQ/dg.bib
+++ b/docs/ESDG_GQ/dg.bib
@@ -1,3 +1,13 @@
+@article{kopriva2016geometry,
+  title={{Geometry effects in nodal discontinuous Galerkin methods on curved elements that are provably stable}},
+  author={Kopriva, David A and Gassner, Gregor J},
+  journal={Applied Mathematics and Computation},
+  volume={272},
+  pages={274--290},
+  year={2016},
+  publisher={Elsevier}
+}
+
 @article{harten1983upstream,
   title={{On upstream differencing and Godunov-type schemes for hyperbolic conservation laws}},
   author={Harten, Amiram and Lax, Peter D and Leer, Bram van},
@@ -695,7 +705,7 @@ author = "Cengke Shi and Chi-Wang Shu",
   title={{Development of the discontinuous Galerkin method for high-resolution, large scale CFD and acoustics in industrial geometries}},
   author={Hillewaert, Koen},
   year={2013},
-  school={UniversitÈ catholique de Louvain},
+  school={Universit√© catholique de Louvain},
 }
 
 @article{patera1984spectral,
@@ -1378,7 +1388,7 @@ publisher={Elsevier}
 }
 
 @article{chan2017bbdg,
-  title={{GPU-Accelerated Bernstein--BÈzier Discontinuous Galerkin Methods for Wave Problems}},
+  title={{GPU-Accelerated Bernstein--B√©zier Discontinuous Galerkin Methods for Wave Problems}},
   author={Chan, Jesse and Warburton, T},
   journal={SIAM Journal on Scientific Computing},
   volume={39},
@@ -1846,7 +1856,7 @@ pages={663-676}
 
 @article{hicken2016multidimensional,
   title={Multidimensional summation-by-parts operators: General theory and application to simplex elements},
-  author={Hicken, Jason E and Del Rey Fern·ndez, David C and Zingg, David W},
+  author={Hicken, Jason E and Del Rey Fern√°ndez, David C and Zingg, David W},
   journal={SIAM Journal on Scientific Computing},
   volume={38},
   number={4},
