updating skewform paper

--- a/docs/skewform/dg.bib
+++ b/docs/skewform/dg.bib
@@ -8,7 +8,12 @@
   year={2018},
   note={In preparation.}
 }
-
+@book{canuto2007spectral,
+  title={Spectral Methods: Fundamentals in Single Domains},
+  author={Canuto, Claudio and Hussaini, M Yousuff and Quarteroni, Alfio and Zang, Thomas A},
+  year={2007},
+  publisher={Springer Science \& Business Media}
+}
 
 @article{visbal1999high,
   title={High-order-accurate methods for complex unsteady subsonic flows},
@@ -1206,6 +1211,13 @@ publisher={Elsevier}
   pages={363--371},
   year={2009},
   publisher={Springer}
+}
+
+@book{kopriva2009implementing,
+  title={{Implementing spectral methods for partial differential equations: algorithms for scientists and engineers}},
+  author={Kopriva, David A},
+  year={2009},
+  publisher={Springer Science \& Business Media}
 }
 
 @article{komatitsch1998spectral,
