updating other experiments and docs

--- a/docs/skewform/dg.bib
+++ b/docs/skewform/dg.bib
@@ -1,3 +1,14 @@
+@article{kozdon2018energy,
+  title={{An energy stable approach for discretizing hyperbolic equations with nonconforming discontinuous Galerkin methods}},
+  author={Kozdon, Jeremy E and Wilcox, Lucas C},
+  journal={Journal of Scientific Computing},
+  volume={76},
+  number={3},
+  pages={1742--1784},
+  year={2018},
+  publisher={Springer}
+}
+
 @article{chan2018efficient,
   title={Efficient entropy stable Gauss collocation schemes},
   author={Chan, Jesse and Fernandez, David C Del Rey and Carpenter, Mark},
