--- a/talks/ECCM2018/iga/main.tex
+++ b/talks/ECCM2018/iga/main.tex
@@ -172,10 +172,10 @@ title style={font=\footnotesize}
 \usepackage[normalem]{ulem}
 
 \usepackage{graphicx}
-%\usepackage{subfigure}
 \usepackage{subfig}
-%\usepackage{caption}
-%\usepackage{subcaption}
+\makeatletter
+\let\@@magyar@captionfix\relax
+\makeatother
 
 \usepackage{color}
 \usepackage{pdflscape}
