--- a/talks/UT2017/main.tex
+++ b/talks/UT2017/main.tex
@@ -171,6 +171,10 @@ title style={font=\footnotesize}
 \usepackage{graphicx}
 %\usepackage{subfigure}
 \usepackage{subfig}
+\makeatletter
+\let\@@magyar@captionfix\relax
+\makeatother
+
 %\usepackage{caption}
 %\usepackage{subcaption}
 
