--- a/docs/ESDG_GQ/esdg_gq.tex
+++ b/docs/ESDG_GQ/esdg_gq.tex
@@ -332,7 +332,7 @@ The instability of high order methods is rooted in the fact that discretizations
 
 The dissipation of entropy serves as an energetic principle for nonlinear conservation laws \cite{dafermos2005compensated}, and requires the use of the chain rule in its proof.  Discrete instability is typically tied to the fact that, when discretizing systems of nonlinear PDEs, the chain rule does not typically hold at the discrete level.  The lack of a chain rule was circumvented by using a non-standard ``flux differencing'' formulation \cite{fisher2013high, carpenter2014entropy, gassner2016split, gassner2017br1}, which is key to constructing semi-discretely entropy stable high order schemes on unstructured quadrilateral and hexahedral meshes.  Flux differencing replaces the derivative of the nonlinear flux with the discrete differentiation of an auxiliary quantity.  This auxiliary quantity is computed through the evaluation of a two-point entropy conservative flux \cite{tadmor1987numerical} using pairs of solution values at quadrature points.  These entropy stable schemes were later extended to non-tensor product elements using GLL-like quadrature points on triangles and tetrahedra \cite{chen2017entropy, crean2018entropy}.  More recently, the construction of efficient entropy stable schemes was extended to more arbitrary choices of basis and quadrature \cite{chan2017discretely, chan2018discretely}.  
 
-While entropy stable collocation schemes have been constructed on Gauss-like quadrature points without boundary nodes \cite{crean2017high}, the inter-element coupling terms for such schemes introduce an ``all-to-all'' coupling between degrees of freedom on two neighboring elements.  These coupling terms require evaluating two-point fluxes between solution states at all collocation nodes on two neighboring elements, resulting in significantly more communication and computation compared to collocation schemes based on point sets containing boundary nodes.  This work introduces efficient and entropy stable inter-element coupling terms for Gauss collocation schemes which require only communication of face values between neighboring elements.  The construction of these terms follows the framework introduced in \cite{chan2017discretely, chan2018discretely} for triangles and tetrahedra.  
+While entropy stable collocation schemes have been constructed on Gauss-like quadrature points without boundary nodes \cite{crean2017high}, the inter-element coupling terms for such schemes introduce an ``all-to-all'' coupling between degrees of freedom on two neighboring elements in one dimension (on tensor product elements in higher dimensions, these coupling terms couple together lines of nodes).  These coupling terms require evaluating two-point fluxes between solution states at all collocation nodes on two neighboring elements, resulting in significantly more communication and computation compared to collocation schemes based on point sets containing boundary nodes.  This work introduces efficient and entropy stable inter-element coupling terms for Gauss collocation schemes which require only communication of face values between neighboring elements.  The construction of these terms follows the framework introduced in \cite{chan2017discretely, chan2018discretely} for triangles and tetrahedra.  
 
 The main motivation for exploring tensor product (quadrilateral and hexahedral) elements is the significant reduction in the number of operations required compared to high order entropy stable schemes on simplicial meshes \cite{chan2017discretely, chan2018discretely}.  Entropy stability schemes on simplicial elements require evaluating two-point fluxes between solution states at all quadrature points on an element.  For a degree $N$ approximation, the number of quadrature points on a simplex scales as $O(N^d)$ in $d$ dimensions, and results in $O(N^{2d})$ two-point flux evaluations per element.  In contrast, entropy stable schemes on quadrilateral and hexahedral elements require only the evaluation of two-point fluxes along lines of nodes due to a tensor product structure, resulting in $O(N^{d+1})$ evaluations in $d$ dimensions.  
 
@@ -374,7 +374,7 @@ Entropy stable collocation methods have largely utilized Gauss-Legendre-Lobatto 
 
 GLL quadratures contain boundary points, which greatly simplifies the construction of inter-element coupling terms for entropy stable collocation schemes.  However, it is also known that the use of GLL quadrature within DG methods under-integrates the mass matrix, which can lead to solution ``aliasing'' and lower accuracy \cite{parsani2016entropy}.  In this work, we explore entropy stable collocation schemes based on Gauss quadrature points instead of GLL points.  
 
-This comparison is motivated by the accuracy of each respective quadrature rule.  While $(N+1)$-point GLL quadrature rules are exact for polynomial integrands of degree $(2N-1)$, $(N+1)$-point Gauss quadrature rules are exact for polynomials of degree $(2N+1)$.  This higher accuracy of Gauss quadrature has been shown to translate to lower errors and slightly improved rates of convergence in simulations of wave propagation and fluid flow \cite{kopriva2010quadrature, hindenlang2012explicit, chan2015gpu}.  However, Gauss points have not been widely used to construct entropy stable discretizations due to the lack of efficient, stable, and high order accurate inter-element coupling terms, known as simultaneous approximation terms (SAT) in the finite difference literature \cite{fernandez2014review, crean2017high, fernandez2018simultaneous}.  SATs for Gauss points are non-compact, in the sense that they introduce all-to-all coupling between degrees of freedom on neighboring elements.  This results in greater communication between elements, as well as a significantly larger number of two-point flux evaluations and floating point operations.  
+This comparison is motivated by the accuracy of each respective quadrature rule.  While $(N+1)$-point GLL quadrature rules are exact for polynomial integrands of degree $(2N-1)$, $(N+1)$-point Gauss quadrature rules are exact for polynomials of degree $(2N+1)$.  This higher accuracy of Gauss quadrature has been shown to translate to lower errors and slightly improved rates of convergence in simulations of wave propagation and fluid flow \cite{kopriva2010quadrature, hindenlang2012explicit, chan2015gpu}.  However, Gauss points have not been widely used to construct entropy stable discretizations due to the lack of efficient, stable, and high order accurate inter-element coupling terms, known as simultaneous approximation terms (SAT) in the finite difference literature \cite{fernandez2014review, crean2017high, fernandez2018simultaneous}.  SATs for Gauss points are non-compact, in the sense that they introduce all-to-all coupling between degrees of freedom on neighboring elements in one dimension.  This results in greater communication between elements, as well as a significantly larger number of two-point flux evaluations and floating point operations.  
 
 It is possible to realize the improved accuracy of Gauss points while avoiding non-compact SATs through a staggered grid formulation, where the solution is stored at Gauss nodes but interpolated to a set of higher degree $(N+2)$ GLL ``flux'' points for computation \cite{parsani2016entropy}.  Because GLL nodes include boundary points, compact and high order accurate SAT terms can be constructed for the flux points.  After performing computations on the flux points, the results are interpolated back to Gauss points and used to evolve the solution forward in time.  Figure~\ref{fig:nodesets} shows an illustration of GLL, staggered grid, and Gauss point sets for a 2D quadrilateral element.  
 
@@ -552,7 +552,9 @@ will yield a semi-discrete version of the conservation of entropy (mimicking (\r
 \end{equation}
 We refer to \cite{crean2017high, crean2018entropy} for the proof of (\ref{eq:consentropyGSBP}).  
 
-The drawback of the SATs introduced in this section lies in the nature of the off-diagonal matrices $\bm{t}_R\bm{t}_L$ and $-\bm{t}_L\bm{t}_R$.  For Gauss nodes, these blocks are dense, which implies that inter-element coupling terms produce a non-compact stencil.  Evaluating (\ref{eq:ESgsbp}) requires computing two-point fluxes $\bm{f}_S$ between all nodes on two neighboring elements, which significantly increases both the computational work, as well as communication between neighboring elements.  The main goal of this work is to circumvent the all-to-all coupling of degrees of freedom introduced by the SATs described in this section, which can be done through the use of ``decoupled'' SBP operators.  
+The drawback of the SATs introduced in this section lies in the nature of the off-diagonal matrices $\bm{t}_R\bm{t}_L$ and $-\bm{t}_L\bm{t}_R$.  For Gauss nodes, these blocks are dense, which implies that inter-element coupling terms produce a non-compact stencil.  Evaluating (\ref{eq:ESgsbp}) requires computing two-point fluxes $\bm{f}_S$ between all nodes on two neighboring elements, which significantly increases both the computational work, as well as communication between neighboring elements.  This leads to all-to-all coupling between degrees of freedom in 1D, and to coupling along one-dimensional lines of nodes in higher dimensions due to the tensor product structure.  
+
+The main goal of this work is to circumvent this tighter coupling of degrees of freedom introduced by the SATs described in this section, which can be done through the use of ``decoupled'' SBP operators.  
 
 \subsection{Decoupled SBP operators}
 
@@ -778,8 +780,8 @@ It can be helpful to split up $\bm{Q}_h$ into two matrices
 \bm{Q}_h = \bm{S}_h + \frac{1}{2}\bm{B}_h, \qquad
 \bm{S}_h \myeq \LRs{\begin{array}{cc|cc}
 \bm{S} &  \frac{1}{2}\bm{V}_f^T\bm{B} & & \\
- - \frac{1}{2}\bm{B}\bm{V}_f &  & & \frac{1}{2}\bm{e}_R\bm{e}_L^T\\
- \hline
+ - \frac{1}{2}\bm{B}\bm{V}_f &  & & \frac{1}{2}\bm{e}_R\bm{e}_L^T\\ [.2em]
+ \hline\\[-1.0em]
 && \bm{S} &  \frac{1}{2}\bm{V}_f^T\bm{B} \\
 & -\frac{1}{2}\bm{e}_L\bm{e}_R^T &  - \frac{1}{2}\bm{B}\bm{V}_f &\\
 \end{array}}\\
@@ -1156,7 +1158,7 @@ The lightly warped mesh corresponds to $\alpha = 1/32$, the moderately warped me
     xlabel={Mesh size $h$},
     ylabel={$L^2$ errors}, 
 %    xmin=.0125, 
-    ymin=2.5e-8, ymax=5,
+    ymin=2.5e-11, ymax=5,
     legend pos=south east, legend cell align=left, legend style={font=\tiny},	
     xmajorgrids=true, ymajorgrids=true, grid style=dashed,
     legend entries={GLL, Gauss}    
@@ -1167,32 +1169,32 @@ cycle list={{blue, mark=*}, {red, dashed ,mark=square*}}
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.125,1.22861)(0.0625,0.236646)(0.03125,0.0258883)(0.015625,0.00406122)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.553435)(0.0625,0.0625441)(0.03125,0.0117156)(0.015625,0.0022841)};
+coordinates{(0.125,0.553435)(0.0625,0.0625441)(0.03125,0.0117156)(0.015625,0.0022841)}; %(0.0078125,0.000362526)
 
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.125,0.414449)(0.0625,0.0412224)(0.03125,0.00293039)(0.015625,0.000145701)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.25082)(0.0625,0.0198863)(0.03125,0.000673152)(0.015625,2.98263e-05)};
+coordinates{(0.125,0.25082)(0.0625,0.0198863)(0.03125,0.000673152)(0.015625,2.98263e-05)}; %(0.0078125, 1.77421e-06)
 
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.125,0.123516)(0.0625,0.00439285)(0.03125,0.000126852)(0.015625,5.61786e-06)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.0768018)(0.0625,0.0020579)(0.03125,5.55322e-05)(0.015625,2.36108e-06)};
+coordinates{(0.125,0.0768018)(0.0625,0.0020579)(0.03125,5.55322e-05)(0.015625,2.36108e-06)}; % (0.0078125,8.55848e-08)
 
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.125,0.0332509)(0.0625,0.000970148)(0.03125,2.10334e-05)(0.015625,2.60008e-07)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.0151231)(0.0625,0.000454595)(0.03125,1.00203e-05)(0.015625,6.57796e-08)};
+coordinates{(0.125,0.0151231)(0.0625,0.000454595)(0.03125,1.00203e-05)(0.015625,6.57796e-08)}; %(0.0078125, 9.32809e-10)
 
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.0106752)(0.0625,0.000133284)(0.03125,7.97032e-07)(0.015625,NaN)};
+coordinates{(0.125,0.0106752)(0.0625,0.000133284)(0.03125,7.97032e-07)(0.015625,9.35152e-09)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.00657096)(0.0625,9.22845e-05)(0.03125,3.60025e-07)(0.015625,NaN)};
+coordinates{(0.125,0.00657096)(0.0625,9.22845e-05)(0.03125,3.60025e-07)(0.015625,3.63974e-09)}; %(0.0078125, 1.23726e-10)
 
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.00330917)(0.0625,1.67825e-05)(0.03125,1.32696e-07)(0.015625,NaN)};
+coordinates{(0.125,0.00330917)(0.0625,1.67825e-05)(0.03125,1.32696e-07)(0.015625,4.73518e-10)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.00185273)(0.0625,1.21465e-05)(0.03125,1.14289e-07)(0.015625,NaN)};
+coordinates{(0.125,0.00185273)(0.0625,1.21465e-05)(0.03125,1.14289e-07)(0.015625,1.72358e-10)}; 
 \end{loglogaxis}
 \end{tikzpicture}
 }
@@ -1203,8 +1205,8 @@ coordinates{(0.125,0.00185273)(0.0625,1.21465e-05)(0.03125,1.14289e-07)(0.015625
     xlabel={Mesh size $h$},
 %    ylabel={$L^2$ errors}, 
 %    xmin=.0125, 
-    ymin=2.5e-8, ymax=5,
-    legend pos=south east, legend cell align=left, legend style={font=\tiny},	
+    ymin=2.5e-11, ymax=5,
+      legend pos=south east, legend cell align=left, legend style={font=\tiny},	
     xmajorgrids=true, ymajorgrids=true, grid style=dashed,
     legend entries={GLL, Gauss}    
 ]
@@ -1228,13 +1230,13 @@ coordinates{(0.125,0.0424351)(0.0625,0.00114569)(0.03125,3.59697e-05)(0.015625,5
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.125,0.0215298)(0.0625,0.000523714)(0.03125,9.27521e-06)(0.015625,7.14031e-08)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.0112838)(0.0625,0.000219049)(0.03125,1.84304e-06)(0.015625,NaN)};
+coordinates{(0.125,0.0112838)(0.0625,0.000219049)(0.03125,1.84304e-06)(0.015625,2.40402e-08)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.00809138)(0.0625,8.23415e-05)(0.03125,3.95565e-07)(0.015625,NaN)};
+coordinates{(0.125,0.00809138)(0.0625,8.23415e-05)(0.03125,3.95565e-07)(0.015625,4.01268e-09)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.00388316)(0.0625,2.55074e-05)(0.03125,2.68102e-07)(0.015625,NaN)};
+coordinates{(0.125,0.00388316)(0.0625,2.55074e-05)(0.03125,2.68102e-07)(0.015625,9.13754e-10)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.00222029)(0.0625,1.33111e-05)(0.03125,9.72405e-08)(0.015625,NaN)};
+coordinates{(0.125,0.00222029)(0.0625,1.33111e-05)(0.03125,9.72405e-08)(0.015625,1.81386e-10)};
 
 \end{loglogaxis}
 \end{tikzpicture}
@@ -1247,7 +1249,7 @@ coordinates{(0.125,0.00222029)(0.0625,1.33111e-05)(0.03125,9.72405e-08)(0.015625
     xlabel={Mesh size $h$},
     ylabel={$L^2$ errors}, 
 %    xmin=.0125,
-    ymin=2.5e-8, ymax=5,    
+    ymin=2.5e-11, ymax=5,
     legend pos=south east, legend cell align=left, legend style={font=\tiny},	
     xmajorgrids=true, ymajorgrids=true, grid style=dashed,
     legend entries={GLL, Gauss}    
@@ -1279,12 +1281,12 @@ coordinates{(0.125,0.0924215)(0.0625,0.00276519)(0.03125,6.80528e-05)(0.015625,3
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.125,0.0729963)(0.0625,0.00276104)(0.03125,4.11305e-05)(0.015625,2.36125e-07)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.0378013)(0.0625,0.0007649)(0.03125,4.15848e-06)(0.015625,NaN)};
+coordinates{(0.125,0.0378013)(0.0625,0.0007649)(0.03125,4.15848e-06)(0.015625,1.8685e-08)};
 
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.026577)(0.0625,0.000589552)(0.03125,5.3039e-06)(0.015625,NaN)};
+coordinates{(0.125,0.026577)(0.0625,0.000589552)(0.03125,5.3039e-06)(0.015625,2.23719e-08)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.0154563)(0.0625,0.000146207)(0.03125,8.83156e-07)(0.015625,NaN)};
+coordinates{(0.125,0.0154563)(0.0625,0.000146207)(0.03125,8.83156e-07)(0.015625,1.18829e-09)};
 
 \end{loglogaxis}
 \end{tikzpicture}
@@ -1296,7 +1298,7 @@ coordinates{(0.125,0.0154563)(0.0625,0.000146207)(0.03125,8.83156e-07)(0.015625,
     xlabel={Mesh size $h$},
 %    ylabel={$L^2$ errors}, 
 %    xmin=.0125,
-    ymin=2.5e-8, ymax=5,    
+    ymin=2.5e-11, ymax=5,
     legend pos=south east, legend cell align=left, legend style={font=\tiny},	
     xmajorgrids=true, ymajorgrids=true, grid style=dashed,
     legend entries={GLL, Gauss}    
@@ -1327,7 +1329,7 @@ coordinates{(0.125,0.274721)(0.0625,0.0120499)(0.03125,0.000157175)(0.015625,9.6
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.125,0.294238)(0.0625,0.0162153)(0.03125,0.000166829)(.015625,1.19661e-06)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(0.125,0.150916)(0.0625,0.00538908)(0.03125,2.79182e-05)};
+coordinates{(0.125,0.150916)(0.0625,0.00538908)(0.03125,2.79182e-05)(.015625,1.98845e-07)};
 \end{loglogaxis}
 \end{tikzpicture}
 }
@@ -1361,7 +1363,7 @@ We take $c_1 = c_2 = 5$, $p_0 = {1}/{\gamma}$, and $\Pi_{\max} = 0.4$, and solve
 \end{align*} 
 On curved meshes, the geometric terms are constructed using the approach of Kopriva described in Section~\ref{sec:2}.  A $C_{\rm CFL} = .75$ is used for all experiments.  
 
-Figure~\ref{fig:err3d} shows the $L^2$ errors for degrees $N = 2, 3, 4$.  As in the 2D case, Gauss collocation schemes produce smaller errors than GLL collocation schemes, especially on on curved meshes.  The difference between the two schemes on affine meshes is slightly more pronounced than in 2D.  The difference between the two schemes on curved meshes is qualitatively similar to the 2D case, with Gauss collocation achieving higher accuracy than GLL collocation schemes at all polynomial degrees and mesh resolutions.  %, which may be due to the specific curvilinear warping applied in this work.  
+Figure~\ref{fig:err3d} shows the $L^2$ errors for degrees $N = 2,\ldots, 7$.  As in the 2D case, Gauss collocation schemes produce smaller errors than GLL collocation schemes, especially on on curved meshes.  The difference between the two schemes on affine meshes is slightly more pronounced than in 2D.  The difference between the two schemes on curved meshes is qualitatively similar to the 2D case, with Gauss collocation achieving higher accuracy than GLL collocation schemes at all polynomial degrees and mesh resolutions.  %, which may be due to the specific curvilinear warping applied in this work.  
 
 \begin{figure}
 \centering
@@ -1384,22 +1386,28 @@ cycle list={{blue, mark=*}, {red, dashed ,mark=square*}}
 coordinates{(0.25,2.62759)(0.125,0.728523)(0.0625,0.112225)(0.03125,0.018711)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.25,1.53203)(0.125,0.23283)(0.0625,0.0417033)(0.03125,0.00806707)};
+
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.25,0.934758)(0.125,0.191949)(0.0625,0.0119788)(0.03125,0.000558681)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.25,0.562488)(0.125,0.0864096)(0.0625,0.00268061)(0.03125,0.000136725)};
+
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.25,0.460425)(0.125,0.02445)(0.0625,0.000821249)(0.03125,4.67491e-05)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.25,0.239027)(0.125,0.0077433)(0.0625,0.000219705)(0.03125,2.67589e-05)};
+
+% N = 5
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.25,0.138105)(0.125,0.00744055)(0.0625,0.000126057)(0.03125,NaN)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.25,0.0547127)(0.125,0.00242675)(0.0625,4.2962e-05)(0.03125,NaN)};
+% N = 6
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.25,0.0489719)(0.125,0.000897467)(0.0625,2.55644e-05)(0.03125,NaN)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.25,0.0246519)(0.125,0.000324802)(0.0625,2.44009e-05)(0.03125,NaN)};
+% N = 7
 \addplot+[semithick, mark options={solid, fill=markercolor}]
 coordinates{(0.25,0.023319)(0.125,0.00021951)(0.0625,NaN)(0.03125,NaN)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
@@ -1725,7 +1733,7 @@ We note that the number of two-point flux evaluations and matrix operations will
 
 This work shows how to construct efficient entropy stable high order Gauss collocation DG schemes on quadrilateral and hexahedral meshes.  Key to the construction of efficient methods are decoupled SBP operators, which deliver entropy stability and high order accuracy while maintaining compact inter-element coupling terms.  These operators are also compatible with existing entropy stable methods for applying interface dissipation \cite{winters2017uniquely} or imposing boundary conditions.  Numerical experiments demonstrate both the stability and high order accuracy of the proposed Gauss collocation schemes on both affine and curvilinear meshes.  
 
-We note that results for Gauss collocation are similar to those attained by entropy stable staggered-grid schemes \cite{parsani2016entropy}, and require a similar number of two-point flux evaluations.  However, Gauss collocation schemes result in a lower number floating point operations from matrix computations compared to staggered-grid methods.  While a rigorous computational comparison between GLL and Gauss collocation schemes remains to be done, Gauss collocation schemes show significant improvements in accuracy compared to GLL collocation schemes on non-Cartesian meshes.  In particular, for sufficiently warped curvilinear mappings, degree $N$ Gauss collocation schemes achieve an accuracy comparable to degree $(N+1)$ GLL collocation schemes in two and three dimensions.  
+We note that results for Gauss collocation are similar to those attained by entropy stable staggered-grid schemes \cite{parsani2016entropy}, and require a similar number of two-point flux evaluations.  However, Gauss collocation schemes result in a lower number floating point operations from matrix computations compared to staggered-grid methods.  Finally, while a rigorous computational comparison between GLL and Gauss collocation schemes remains to be done, Gauss collocation schemes show significant improvements in accuracy compared to GLL collocation schemes on non-Cartesian meshes.  In particular, for sufficiently warped curvilinear mappings, degree $N$ Gauss collocation schemes achieve an accuracy comparable to degree $(N+1)$ GLL collocation schemes in two and three dimensions.  
 
 %\note{Mention possible application to non-conforming.}
 
