updating skew form paper

--- a/docs/skewform/dg.bib
+++ b/docs/skewform/dg.bib
@@ -10,15 +10,12 @@
 }
 
 @article{chan2018efficient,
-  title={Efficient entropy stable Gauss collocation schemes},
-  author={Chan, Jesse and Fernandez, David C Del Rey and Carpenter, Mark},
-  journal={},
-  volume={},
-  number={},
-  pages={},
-  year={2018},
-  note={In preparation.}
+  title={{Efficient entropy stable Gauss collocation methods}},
+  author={Chan, Jesse and Fernandez, David C and Carpenter, Mark H},
+  journal={arXiv preprint arXiv:1809.01178},
+  year={2018}
 }
+
 @book{canuto2007spectral,
   title={Spectral Methods: Fundamentals in Single Domains},
   author={Canuto, Claudio and Hussaini, M Yousuff and Quarteroni, Alfio and Zang, Thomas A},
