updating with new drafts

--- a/docs/skewform/dg.bib
+++ b/docs/skewform/dg.bib
@@ -1,3 +1,14 @@
+@article{baker1976effect,
+  title={The effect of quadrature errors on finite element approximations for second order hyperbolic equations},
+  author={Baker, Garth A and Dougalis, Vassilios A},
+  journal={SIAM journal on numerical analysis},
+  volume={13},
+  number={4},
+  pages={577--598},
+  year={1976},
+  publisher={SIAM}
+}
+
 @article{kozdon2018energy,
   title={{An energy stable approach for discretizing hyperbolic equations with nonconforming discontinuous Galerkin methods}},
   author={Kozdon, Jeremy E and Wilcox, Lucas C},
