--- a/docs/ESDG_mortar/main.tex
+++ b/docs/ESDG_mortar/main.tex
@@ -337,7 +337,7 @@ legend style={font=\small}
 
 This work is motivated by complications which arise when designing entropy stable couplings between elements which do not share the same boundary nodes.  This can arise, for example, for hybrid and non-conforming meshes.  
 
-\paragraph{Hybrid meshes:} It was shown in \cite{chan2018skew} that an entropy stable 
+\paragraph{Hybrid meshes:} entropy stable DG methods on hybrid meshes were introduced in \cite{chan2018skew} using a skew-symmetric formulation.  The resulting methods are stable for more arbitrary choices of surface quadrature, in particular when an SBP property may not hold.  
 
 \paragraph{Non-conforming meshes}
 
@@ -385,9 +385,9 @@ In order to show stability, we require that both $\bm{P}_f$ and $\bm{P}_m$ are d
 \end{remark}
 
 
-We can now define operators which map between surface and mortar quadrature points.  Let $\bm{E}_f$ denote the map from surface to mortar points, and let $\tilde{\bm{E}}_f $ denote the map from mortar to surface points.  Both operators are defined through an $L^2$ projection to the trace space and interpolation to appropriate points
+We can now define operators which map between surface and mortar quadrature points.  Let $\bm{E}_m$ denote the map from surface to mortar points, and let $\tilde{\bm{E}}_m $ denote the map from mortar to surface points.  Both operators are defined through an $L^2$ projection to the trace space and interpolation to appropriate points
 \[
-\bm{E}_f = \bm{T}_m \bm{P}_f, \qquad \tilde{\bm{E}}_f = \bm{T}_f \bm{P}_m.
+\bm{E}_m = \bm{T}_m \bm{P}_f, \qquad \tilde{\bm{E}}_m = \bm{T}_f \bm{P}_m.
 \]  
 We also define a mortar boundary matrix
 \[
@@ -398,8 +398,8 @@ Then, a mortar-based formulation can be given as follows:
 \bm{M}\td{\bm{u}_N}{t} + \begin{bmatrix} \bm{V}_q \\ \bm{V}_f \\ \bm{V}_m \end{bmatrix}^T
 \LRp{\begin{bmatrix}
 \bm{Q}_i-\bm{Q}_i^T & \bm{E}^T\bm{B}_i &\\
--\bm{B}_i\bm{E} &  & \bm{B}_i\tilde{\bm{E}}_f \\
-& -\tilde{\bm{B}}_i{\bm{E}}_f & 
+-\bm{B}_i\bm{E} &  & \bm{B}_i\tilde{\bm{E}}_m \\
+& -\tilde{\bm{B}}_i{\bm{E}}_m & 
 \end{bmatrix} \circ \bm{F}_S}\bm{1} + \bm{V}_m^T\tilde{\bm{B}}_i\bm{f}_i^* = 0.  
 \label{eq:mortar}
 \end{equation}
@@ -407,8 +407,8 @@ Here, we have appended an extra row and column to the decoupled SBP matrix, and 
 
 We first note that
 \begin{align*}
-\bm{B}_i\tilde{\bm{E}}_f &= \diag{\bm{W}_f} \bm{T}_f \bm{P}_m = \diag{\hat{\bm{n}}} \bm{W}_f \bm{T}_f \bm{M}_m^{-1}\bm{T}_m\bm{W}_m\\
-&=  \bm{W}_f \bm{T}_f \bm{M}_m^{-1}\bm{T}^T_m\bm{W}_m\diag{\hat{\bm{n}}_i} = \bm{P}_f^T\bm{T}^T_m \tilde{\bm{B}}_i = \LRp{\tilde{\bm{B}}_i{\bm{E}}_f}^T
+\bm{B}_i\tilde{\bm{E}}_m &= \diag{\bm{W}_f} \bm{T}_f \bm{P}_m = \diag{\hat{\bm{n}}} \bm{W}_f \bm{T}_f \bm{M}_m^{-1}\bm{T}_m\bm{W}_m\\
+&=  \bm{W}_f \bm{T}_f \bm{M}_m^{-1}\bm{T}^T_m\bm{W}_m\diag{\hat{\bm{n}}_i} = \bm{P}_f^T\bm{T}^T_m \tilde{\bm{B}}_i = \LRp{\tilde{\bm{B}}_i{\bm{E}}_m}^T
 \end{align*}
 where we have used that $\bm{W}_m$ is diagonal and that the outward normal $\hat{\bm{n}}_i$ on the reference element is constant over each face.  This implies skew-symmetry of the decoupled SBP operator and entropy stability of the overall system.    
 
@@ -417,21 +417,67 @@ where we have used that $\bm{W}_m$ is diagonal and that the outward normal $\hat
 
 \section{A mortar-based implementation}
 
-While the formulation presented above is convenient for analysis, it is computationally expensive to implement.  However, using properties of the mortar matrices $\bm{E}_f, \tilde{\bm{E}}_f$, we can rewrite the above formulation in a way which reflects a traditional mortar-based finite element implementation.  In other words, we wish to implement (\ref{eq:mortar}) such that the only modification from the implementations in \cite{chan2017discretely} is a pre-processing step on mortar faces.  
+While the formulation presented above is convenient for analysis, it is computationally expensive to implement.  However, using properties of the mortar matrices $\bm{E}_m, \tilde{\bm{E}}_m$, we can rewrite the above formulation in a way which reflects a traditional mortar-based finite element implementation.  In other words, we wish to implement (\ref{eq:mortar}) such that the only modification from the implementations in \cite{chan2017discretely} is a pre-processing step on mortar faces.  
 
-We first note that, since $\bm{E}_f$ maps from surface nodes to mortar nodes, $\bm{V}_m = \bm{E}_f \bm{V}_f$.  Thus, we can rewrite the numerical flux contribution as
+We first note that, since $\bm{E}_m$ maps from surface nodes to mortar nodes, $\bm{V}_m = \bm{E}_m \bm{V}_f$.  Thus, we can rewrite the numerical flux contribution as
 \begin{align*}
- \bm{V}_m^T\tilde{\bm{B}}_i\bm{f}_i^* &= \bm{V}_f^T \bm{E}_f^T \bm{W}_m\diag{\hat{\bm{n}}_i} \bm{f}_i^* = \bm{V}_f^T  \bm{P}_f^T\bm{T}_m^T\bm{W}_m\diag{\hat{\bm{n}}_i} \bm{f}_i^*\\
- &= \bm{V}_f^T \bm{W}_f \diag{\hat{\bm{n}}_i} \bm{T}_m\bm{M}_m^{-1}\bm{T}_m^T\bm{W}_m \bm{f}_i^* =  \bm{V}_f^T \bm{B}_i \tilde{\bm{E}}_f\bm{f}_i^*.
+ \bm{V}_m^T\tilde{\bm{B}}_i\bm{f}_i^* &= \bm{V}_f^T \bm{E}_m^T \bm{W}_m\diag{\hat{\bm{n}}_i} \bm{f}_i^* = \bm{V}_f^T  \bm{P}_f^T\bm{T}_m^T\bm{W}_m\diag{\hat{\bm{n}}_i} \bm{f}_i^*\\
+ &= \bm{V}_f^T \bm{W}_f \diag{\hat{\bm{n}}_i} \bm{T}_m\bm{M}_m^{-1}\bm{T}_m^T\bm{W}_m \bm{f}_i^* =  \bm{V}_f^T \bm{B}_i \tilde{\bm{E}}_m\bm{f}_i^*.
 \end{align*}
 
-We can similarly reformulate the remaining mortar contributions within (\ref{eq:mortar}).  Multiplying out 
+We can similarly reformulate the remaining mortar contributions within (\ref{eq:mortar}).  We decompose $\bm{F}_S$ into interactions between volume nodes, surface nodes, and mortar nodes
+\[
+\bm{F}_S = \begin{bmatrix}
+\bm{F}_S^{vv} & \bm{F}_S^{vs} & \bm{F}_S^{vm}\\
+\bm{F}_S^{sv} & \bm{F}_S^{ss} & \bm{F}_S^{sm}\\
+\bm{F}_S^{mv} & \bm{F}_S^{ms} & \bm{F}_S^{mm}
+\end{bmatrix}
+\]
+Then, the on-element contributions to (\ref{eq:mortar}) can be expanded as follows
+\begin{align*}
+&\begin{bmatrix} \bm{V}_q \\ \bm{V}_f \\ \bm{V}_m \end{bmatrix}^T
+\LRp{\begin{bmatrix}
+\bm{Q}_i-\bm{Q}_i^T & \bm{E}^T\bm{B}_i &\\
+-\bm{B}_i\bm{E} &  & \bm{B}_i\tilde{\bm{E}}_m \\
+& -\tilde{\bm{B}}_i{\bm{E}}_m & 
+\end{bmatrix} \circ \bm{F}_S}\bm{1} \\
+&= 
+\begin{bmatrix} \bm{V}_q \\ \bm{V}_f \end{bmatrix}^T
+\LRp{\begin{bmatrix}
+\bm{Q}_i-\bm{Q}_i^T & \bm{E}^T\bm{B}_i\\
+-\bm{B}_i\bm{E} & \\
+\end{bmatrix} \circ \bm{F}_S}\bm{1} \\
+&+ \bm{V}_f^T \LRp{\bm{B}_i\tilde{\bm{E}}_m\circ \bm{F}_S^{sm}}\bm{1} - \bm{V}_m^T \LRp{ \tilde{\bm{B}}_i\bm{E}_m \circ \bm{F}_S^{ms}}\bm{1}
+\end{align*}
+Since multiplication by diagonal matrices $\bm{B}_i, \tilde{\bm{B}}_i$ is associative under the Hadamard product, the latter terms can be rewritten as 
+\begin{align*}
+ \bm{V}_f^T \LRp{\bm{B}_i\tilde{\bm{E}}_m\circ \bm{F}_S^{sm}}\bm{1} &=  \bm{V}_f^T \bm{B}_i \LRp{\tilde{\bm{E}}_m\circ \bm{F}_S^{sm}}\bm{1}\\
+\bm{V}_m^T \LRp{ \tilde{\bm{B}}_i\bm{E}_m \circ \bm{F}_S^{ms}}\bm{1} &= \bm{V}_m^T \tilde{\bm{B}}_i \LRp{ \bm{E}_m \circ \bm{F}_S^{ms}}\bm{1} = \bm{V}_f^T \bm{B}_i \tilde{\bm{E}}_m \LRp{ \bm{E}_m \circ \bm{F}_S^{ms}}\bm{1} 
+\end{align*}
+Then, (\ref{eq:mortar}) can be rewritten as 
+\begin{align}
+\bm{M}\td{\bm{u}_N}{t} &+ 
+\begin{bmatrix} \bm{V}_q \\ \bm{V}_f \end{bmatrix}^T
+\LRp{\begin{bmatrix}
+\bm{Q}_i-\bm{Q}_i^T & \bm{E}^T\bm{B}_i\\
+-\bm{B}_i\bm{E} & \\
+\end{bmatrix} \circ \bm{F}_S}\bm{1} + \bm{V}_f^T\bm{B}_i \tilde{\bm{f}}^*_i = 0 \label{eq:mortar2}\\
+\tilde{\bm{f}}^*_i &= \tilde{\bm{E}}_m\bm{f}^*_i + \LRp{\tilde{\bm{E}}_m\circ \bm{F}_S^{sm}}\bm{1} - \tilde{\bm{E}}_m \LRp{ \bm{E}_m \circ \bm{F}_S^{ms}}\bm{1} 
+\nonumber
+\end{align}
+If the surface and mortar nodes are identical, then $\bm{E}_m = \tilde{\bm{E}}_m = \bm{I}$ and $\LRp{\tilde{\bm{E}}_m \circ \bm{F}_S^{sm}}\bm{1} = \LRp{ \bm{E}_m \circ \bm{F}_S^{ms}}\bm{1}$.  The correction terms within $\tilde{\bm{f}}^*$ cancel out, and we recover the original scheme from \cite{chan2017discretely}.
 
+Note that in (\ref{eq:mortar2}), the only interactions between surface and mortar nodes occurs within the computation of $\tilde{\bm{f}}^*_i$, which can be done solely on mortar interfaces.  The computational structure of 
+\begin{enumerate}
+\item Compute volume contributions to the RHS
+\item Communicate surface contributions to mortar interfaces and compute $\tilde{\bm{f}}^*_i$.
+\item Communicate $\tilde{\bm{f}}^*_i$ back to each element.  
+\end{enumerate}
 %\bm{M}\td{\bm{u}_N}{t} + \begin{bmatrix} \bm{V}_q \\ \bm{V}_f \\ \bm{V}_m \end{bmatrix}^T
 %\LRp{\begin{bmatrix}
 %\bm{Q}_i-\bm{Q}_i^T & \bm{E}^T\bm{B}_i &\\
-%-\bm{B}_i\bm{E} &  & \bm{B}_i\tilde{\bm{E}}_f \\
-%& -\tilde{\bm{B}}_i{\bm{E}}_f & 
+%-\bm{B}_i\bm{E} &  & \bm{B}_i\tilde{\bm{E}}_m \\
+%& -\tilde{\bm{B}}_i{\bm{E}}_m & 
 %\end{bmatrix} \circ \bm{F}_S}\bm{1} + \bm{V}_m^T\tilde{\bm{B}}_i\bm{f}_i^* = 0.  
 
 %It is possible to efficiently interpolate from volume Gauss nodes to split-side Gauss nodes in two steps.  We first interpolate to full-side Gauss nodes on the face, then interpolate from full-side  to split-side Gauss nodes.  Each of these two operations can be done using only one-dimensional interpolation matrices, implying that the interpolation matrix from volume to split-side Gauss nodes can be decomposed into 
@@ -472,6 +518,17 @@ We can similarly reformulate the remaining mortar contributions within (\ref{eq:
 %
 %\note{Do we need 3 layers of surface nodes in 3D?  Interpolation to isotropic split-side nodes is a Kronecker product - does that reduce things down?  }
 
+\section{Error estimates}
+
+\note{Weak derivative vs strong derivative error estimates.  SBP yields that the skew-symmetric form is equivalent to weak form.}
+
+\note{Line DG approach can work, but it's flipped: we increase quadrature strength in the direction \emph{orthogonal} to derivative instead.  May improve accuracy over GLL by giving equivalence w/skew form.}
+
+\section{Numerical experiments}
+
+\subsection{Gauss Lobatto quadrature}
+
+\subsection{Gauss quadrature}
 
 \bibliographystyle{unsrt}
 \bibliography{dg}
