--- a/talks/ECCM2018/iga/main.tex
+++ b/talks/ECCM2018/iga/main.tex
@@ -614,7 +614,7 @@ coordinates{(0.5,7.56052e-06)(0.25,1.32834e-07)(0.125,1.51285e-11)(0.0625,1.6916
 %\end{tikzpicture}}
 }
 \only<2>{
-\subfloat[Warped mesh]{\includegraphics[width=.425\textwidth]{figs/mapped2.png}}
+\subfloat[Warped mesh]{\includegraphics[width=.425\textwidth]{figs/mapped.png}}
 \subfloat[Error for acoustics (first order form)]{
 \begin{tikzpicture}
 \begin{loglogaxis}[
