updating skewform with draft finished

--- a/docs/skewform/dg.bib
+++ b/docs/skewform/dg.bib
@@ -1,3 +1,10 @@
+@article{pazner2018analysis,
+  title={{Analysis and entropy stability of the line-based discontinuous Galerkin method}},
+  author={Pazner, Will and Persson, Per-Olof},
+  journal={arXiv preprint arXiv:1809.09815},
+  year={2018}
+}
+
 @article{gassner2011comparison,
   title={{A comparison of the dispersion and dissipation errors of Gauss and Gauss--Lobatto discontinuous Galerkin spectral element methods}},
   author={Gassner, Gregor and Kopriva, David A},
@@ -1559,6 +1566,16 @@ publisher={Elsevier}
   pages={339--366},
   year={2006},
   publisher={Springer}
+}
+
+@article{krivodonova2013analysis,
+  title={{An analysis of the spectrum of the discontinuous Galerkin method}},
+  author={Krivodonova, Lilia and Qin, Ruibin},
+  journal={Applied Numerical Mathematics},
+  volume={64},
+  pages={1--18},
+  year={2013},
+  publisher={Elsevier}
 }
 
 @article{krivodonova2007limiters,
